[gd_scene load_steps=36 format=3 uid="uid://co6xvtad54578"]

[ext_resource type="Script" path="res://scripts/menus/PauseMenu.gd" id="1_3c4bi"]
[ext_resource type="Texture2D" uid="uid://cimxnsx5gwr4d" path="res://sprites/ui/paused.png" id="1_6dgr1"]
[ext_resource type="TileSet" uid="uid://f24vekl01f5u" path="res://tilesets/world_tile_set.tres" id="2_i85jj"]
[ext_resource type="PackedScene" uid="uid://q216sylh2fdm" path="res://scenes/goblin.tscn" id="2_nq8cu"]
[ext_resource type="Texture2D" uid="uid://bulihgl2ueglj" path="res://sprites/ui/ui_frame.png" id="2_ylshl"]
[ext_resource type="Texture2D" uid="uid://djkk384j7va2j" path="res://sprites/goblin.png" id="3_0uvde"]
[ext_resource type="Texture2D" uid="uid://dhidnnc2is5qk" path="res://sprites/world/tile_border.png" id="3_bnpdb"]
[ext_resource type="Script" path="res://scripts/game/InteractionHandler.gd" id="3_gvhke"]
[ext_resource type="Script" path="res://scripts/menus/SceneChangeButton.gd" id="3_v1sol"]
[ext_resource type="Theme" uid="uid://djsccrxayxp5r" path="res://fonts/SquareBit.tres" id="3_xxilh"]
[ext_resource type="Script" path="res://scripts/game/goblin/GoblinPathBuilder.gd" id="5_ke8id"]
[ext_resource type="Texture2D" uid="uid://bwgbvojnr3wqk" path="res://sprites/ui/empty_slot_icon.png" id="5_mmses"]
[ext_resource type="Texture2D" uid="uid://c8nuxlg6koc4a" path="res://sprites/ui/play_pause_goblin.png" id="7_7kahd"]
[ext_resource type="Script" path="res://scripts/game/MoneyHandler.gd" id="7_c2k6x"]
[ext_resource type="Script" path="res://scripts/game/goblin/GoblinDisplay.gd" id="8_hgbfs"]
[ext_resource type="Texture2D" uid="uid://bmtd3cu1da3dp" path="res://sprites/coin.png" id="10_2hnap"]
[ext_resource type="Texture2D" uid="uid://bbpelpjur13oj" path="res://sprites/ui/empty_house_slot_icon.png" id="12_31335"]
[ext_resource type="Script" path="res://scripts/game/Hoverable.gd" id="12_bf0hw"]
[ext_resource type="Texture2D" uid="uid://c1lbag28o5hqw" path="res://sprites/ui/locked_slot.png" id="12_y674r"]
[ext_resource type="Texture2D" uid="uid://dbv08rorya83m" path="res://sprites/target.png" id="12_ys5km"]
[ext_resource type="Script" path="res://scripts/game/goblin/GoblinQuestsDisplay.gd" id="13_p03ys"]
[ext_resource type="Texture2D" uid="uid://1k4lmjqgwmu5" path="res://sprites/world/house.png" id="13_yjrel"]
[ext_resource type="PackedScene" uid="uid://btm11lqdlooss" path="res://scenes/poi.tscn" id="14_1kkqw"]
[ext_resource type="PackedScene" path="res://scenes/quest_item_display.tscn" id="14_si4p2"]
[ext_resource type="PackedScene" path="res://scenes/item_display.tscn" id="15_a4757"]
[ext_resource type="Script" path="res://scripts/game/goblin/GoblinItemsDisplay.gd" id="16_6h5hg"]
[ext_resource type="Script" path="res://scripts/game/poi/POIDisplay.gd" id="18_1hqj5"]
[ext_resource type="Script" path="res://scripts/game/Inspector.gd" id="21_qif70"]
[ext_resource type="Script" path="res://scripts/game/World.gd" id="24_ewn6v"]
[ext_resource type="Script" path="res://scripts/game/poi/POIManager.gd" id="25_pi7ob"]

[sub_resource type="Gradient" id="Gradient_owtwp"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kefk"]
size = Vector2(7, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oirb3"]
size = Vector2(21, 9)

[sub_resource type="Animation" id="Animation_5hd0b"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vlg6r"]
_data = {
"spin": SubResource("Animation_5hd0b")
}

[node name="Game" type="Node2D"]

[node name="PauseMenu" type="Node2D" parent="."]
process_mode = 3
visible = false
z_index = 1000
scale = Vector2(2, 2)
script = ExtResource("1_3c4bi")
music_volume_cut = 0.75

[node name="Background" type="ColorRect" parent="PauseMenu"]
offset_left = -80.0
offset_top = -50.0
offset_right = 80.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.419608)

[node name="Paused" type="Sprite2D" parent="PauseMenu"]
texture = ExtResource("1_6dgr1")

[node name="Resume" type="Button" parent="PauseMenu"]
offset_left = -14.0
offset_top = -7.0
offset_right = 14.0
offset_bottom = 1.0
theme = ExtResource("3_xxilh")

[node name="Menu" type="Button" parent="PauseMenu"]
offset_left = -14.0
offset_top = 6.0
offset_right = 14.0
offset_bottom = 14.0
theme = ExtResource("3_xxilh")
script = ExtResource("3_v1sol")
scene_loaded = "title_screen"

[node name="InteractionHandler" type="Node2D" parent="." node_paths=PackedStringArray("world", "goblins_label", "goblin_display", "goblin_path_builder", "money_handler")]
script = ExtResource("3_gvhke")
goblin_scene = ExtResource("2_nq8cu")
world = NodePath("../World")
goblins_label = NodePath("../UI/Goblins")
goblin_display = NodePath("../UI/GoblinDisplay")
goblin_path_builder = NodePath("GoblinPathBuilder")
money_handler = NodePath("../UI/MoneyHandler")
starting_goblin_position = Vector2i(8, 5)

[node name="GoblinPathBuilder" type="Node2D" parent="InteractionHandler"]
script = ExtResource("5_ke8id")
world_size = Vector2i(17, 11)

[node name="UI" type="Node2D" parent="."]
z_index = 100

[node name="Frame" type="Sprite2D" parent="UI"]
texture = ExtResource("2_ylshl")

[node name="ShopTimer" type="Label" parent="UI"]
offset_left = 137.0
offset_top = 59.0
offset_right = 145.0
offset_bottom = 66.0
theme = ExtResource("3_xxilh")
text = "--"

[node name="MoneyHandler" type="Node2D" parent="UI"]
script = ExtResource("7_c2k6x")
starting_money = 25
money_change_per_second = 50.0

[node name="Coins" type="Label" parent="UI/MoneyHandler"]
offset_left = 132.0
offset_top = 81.0
offset_right = 144.0
offset_bottom = 91.0
theme = ExtResource("3_xxilh")
text = "0"
horizontal_alignment = 2

[node name="Particles" type="CPUParticles2D" parent="UI/MoneyHandler"]
position = Vector2(152, 83)
emitting = false
amount = 3
one_shot = true
explosiveness = 1.0
texture = ExtResource("10_2hnap")
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 7.0
color_ramp = SubResource("Gradient_owtwp")

[node name="Goblins" type="Label" parent="UI"]
offset_left = 132.0
offset_top = 90.0
offset_right = 144.0
offset_bottom = 100.0
theme = ExtResource("3_xxilh")
text = "0"
horizontal_alignment = 2

[node name="GoblinDisplay" type="Node2D" parent="UI" node_paths=PackedStringArray("quest_manager")]
script = ExtResource("8_hgbfs")
quest_manager = NodePath("../../World/POIManager")

[node name="EmptyGoblin" type="Sprite2D" parent="UI/GoblinDisplay"]
position = Vector2(137, -76)
texture = ExtResource("5_mmses")
hframes = 2
vframes = 2

[node name="Goblin" type="Sprite2D" parent="UI/GoblinDisplay"]
visible = false
position = Vector2(137, -76)
texture = ExtResource("3_0uvde")
hframes = 8
vframes = 2

[node name="PlayPause" type="Sprite2D" parent="UI/GoblinDisplay"]
visible = false
position = Vector2(122, -77)
texture = ExtResource("7_7kahd")
offset = Vector2(0.5, 0.5)
vframes = 2

[node name="Button" type="Area2D" parent="UI/GoblinDisplay/PlayPause"]
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("12_bf0hw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/GoblinDisplay/PlayPause/Button"]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_7kefk")

[node name="Name" type="LineEdit" parent="UI/GoblinDisplay"]
offset_left = 116.0
offset_top = -72.0
offset_right = 161.0
offset_bottom = -57.0
theme = ExtResource("3_xxilh")
placeholder_text = "Goblin"
alignment = 1
caret_blink = true

[node name="Quests" type="Node2D" parent="UI/GoblinDisplay"]
position = Vector2(125, -29)
script = ExtResource("13_p03ys")
quest_item_display_scene = ExtResource("14_si4p2")

[node name="Locked0" type="Sprite2D" parent="UI/GoblinDisplay/Quests"]
visible = false
texture = ExtResource("12_y674r")

[node name="Locked1" type="Sprite2D" parent="UI/GoblinDisplay/Quests"]
visible = false
position = Vector2(12, 0)
texture = ExtResource("12_y674r")

[node name="Locked2" type="Sprite2D" parent="UI/GoblinDisplay/Quests"]
visible = false
position = Vector2(24, 0)
texture = ExtResource("12_y674r")

[node name="Items" type="Node2D" parent="UI/GoblinDisplay"]
position = Vector2(125, -48)
script = ExtResource("16_6h5hg")

[node name="EmptyBoots" type="Sprite2D" parent="UI/GoblinDisplay/Items"]
texture = ExtResource("5_mmses")
hframes = 2
vframes = 2
frame = 2

[node name="Boots" parent="UI/GoblinDisplay/Items" instance=ExtResource("15_a4757")]
visible = false

[node name="EmptyBag" type="Sprite2D" parent="UI/GoblinDisplay/Items"]
position = Vector2(12, 0)
texture = ExtResource("5_mmses")
hframes = 2
vframes = 2
frame = 3

[node name="Bag" parent="UI/GoblinDisplay/Items" instance=ExtResource("15_a4757")]
visible = false
position = Vector2(12, 0)

[node name="Speed" type="Label" parent="UI/GoblinDisplay/Items"]
offset_left = 27.0
offset_top = -4.0
offset_right = 39.0
offset_bottom = 6.0
theme = ExtResource("3_xxilh")
text = "-
"

[node name="POIDisplay" type="Node2D" parent="UI/GoblinDisplay"]
script = ExtResource("18_1hqj5")

[node name="EmptyHouse" type="Sprite2D" parent="UI/GoblinDisplay/POIDisplay"]
position = Vector2(137, 5)
texture = ExtResource("12_31335")
hframes = 2

[node name="House" type="Sprite2D" parent="UI/GoblinDisplay/POIDisplay"]
visible = false
position = Vector2(137, -1)
texture = ExtResource("13_yjrel")
hframes = 8

[node name="EmptyQuestItem" type="Sprite2D" parent="UI/GoblinDisplay/POIDisplay"]
position = Vector2(124, 30)
texture = ExtResource("5_mmses")
hframes = 2
vframes = 2
frame = 1

[node name="QuestItem" parent="UI/GoblinDisplay/POIDisplay" instance=ExtResource("14_si4p2")]
visible = false

[node name="Item1" parent="UI/GoblinDisplay/POIDisplay" instance=ExtResource("15_a4757")]
position = Vector2(138, 30)

[node name="Item1Price" type="Label" parent="UI/GoblinDisplay/POIDisplay"]
offset_left = 134.0
offset_top = 39.0
offset_right = 142.0
offset_bottom = 46.0
theme = ExtResource("3_xxilh")
text = "-"
horizontal_alignment = 1

[node name="Item2" parent="UI/GoblinDisplay/POIDisplay" instance=ExtResource("15_a4757")]
position = Vector2(150, 30)

[node name="Item2Price" type="Label" parent="UI/GoblinDisplay/POIDisplay"]
offset_left = 146.0
offset_top = 39.0
offset_right = 154.0
offset_bottom = 46.0
theme = ExtResource("3_xxilh")
text = "-"
horizontal_alignment = 1

[node name="ConfirmButton" type="ColorRect" parent="UI/GoblinDisplay/POIDisplay"]
visible = false
offset_left = 126.0
offset_top = 49.0
offset_right = 145.0
offset_bottom = 56.0
mouse_filter = 2
color = Color(0.603922, 0.603922, 0.184314, 1)

[node name="Label" type="Label" parent="UI/GoblinDisplay/POIDisplay/ConfirmButton"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 8.0
theme = ExtResource("3_xxilh")
text = "take"
horizontal_alignment = 1

[node name="Button" type="Area2D" parent="UI/GoblinDisplay/POIDisplay/ConfirmButton"]
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("12_bf0hw")

[node name="CollisionShape" type="CollisionShape2D" parent="UI/GoblinDisplay/POIDisplay/ConfirmButton/Button"]
visible = false
position = Vector2(9.5, 3.5)
shape = SubResource("RectangleShape2D_oirb3")

[node name="Inspector" type="Label" parent="UI"]
offset_left = -157.0
offset_top = 79.0
offset_right = 67.0
offset_bottom = 100.0
theme = ExtResource("3_xxilh")
text = "ABC
ABC
ABC"
script = ExtResource("21_qif70")

[node name="Transform" type="Sprite2D" parent="UI/Inspector"]
position = Vector2(5, -171)

[node name="Target" type="Sprite2D" parent="UI/Inspector/Transform"]
z_index = -1
position = Vector2(-16, -16)
texture = ExtResource("12_ys5km")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Inspector/Transform/Target"]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_vlg6r")
}

[node name="World" type="TileMap" parent="."]
z_index = 10
y_sort_enabled = true
position = Vector2(-160, -100)
tile_set = ExtResource("2_i85jj")
format = 2
layer_0/name = "floor"
layer_0/z_index = -10
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 196608, 0, 458752, 196608, 0, 524288, 196608, 1, 589824, 262144, 0, 655360, 262144, 0, 1, 65536, 1, 65537, 65536, 1, 131073, 196608, 1, 196609, 262144, 0, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 196608, 1, 524289, 196608, 0, 589825, 65536, 1, 655361, 196608, 0, 2, 65536, 1, 65538, 65536, 1, 131074, 262144, 1, 196610, 262144, 0, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 262144, 1, 589826, 262144, 0, 655362, 65536, 1, 3, 65536, 1, 65539, 196608, 0, 131075, 262144, 1, 196611, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 458755, 65536, 1, 524291, 65536, 1, 589827, 65536, 1, 655363, 65536, 1, 4, 262144, 0, 65540, 196608, 1, 131076, 262144, 1, 196612, 65536, 1, 262148, 65536, 1, 327684, 65536, 1, 393220, 65536, 1, 458756, 262144, 1, 524292, 65536, 1, 589828, 65536, 1, 655364, 65536, 1, 5, 65536, 1, 65541, 65536, 1, 131077, 262144, 1, 196613, 196608, 1, 262149, 65536, 1, 327685, 65536, 1, 393221, 196608, 1, 458757, 65536, 1, 524293, 65536, 1, 589829, 65536, 1, 655365, 65536, 1, 6, 65536, 1, 65542, 65536, 1, 131078, 65536, 1, 196614, 65536, 1, 262150, 196608, 1, 327686, 65536, 1, 393222, 65536, 1, 458758, 65536, 1, 524294, 65536, 1, 589830, 65536, 1, 655366, 65536, 1, 7, 196608, 0, 65543, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 262151, 65536, 1, 327687, 65536, 1, 393223, 65536, 1, 458759, 65536, 1, 524295, 65536, 1, 589831, 262144, 0, 655367, 65536, 1, 8, 196608, 1, 65544, 262144, 0, 131080, 65536, 1, 196616, 65536, 1, 262152, 65536, 1, 327688, 65536, 1, 393224, 65536, 1, 458760, 65536, 1, 524296, 65536, 1, 589832, 196608, 1, 655368, 196608, 0, 9, 65536, 1, 65545, 65536, 1, 131081, 65536, 1, 196617, 65536, 1, 262153, 262144, 0, 327689, 262144, 1, 393225, 65536, 1, 458761, 65536, 1, 524297, 196608, 0, 589833, 262144, 0, 655369, 65536, 1, 10, 131072, 1, 65546, 131072, 1, 131082, 0, 1, 196618, 0, 2, 262154, 65536, 1, 327690, 262144, 0, 393226, 262144, 1, 458762, 262144, 1, 524298, 196608, 1, 589834, 65536, 1, 655370, 65536, 1, 11, 65536, 1, 65547, 65536, 1, 131083, 65536, 1, 196619, 131072, 0, 262155, 0, 2, 327691, 65536, 1, 393227, 196608, 0, 458763, 196608, 1, 524299, 65536, 1, 589835, 65536, 1, 655371, 65536, 1, 12, 65536, 1, 65548, 262144, 1, 131084, 196608, 0, 196620, 65536, 1, 262156, 131072, 0, 327692, 131072, 1, 393228, 131072, 1, 458764, 131072, 1, 524300, 0, 2, 589836, 262144, 1, 655372, 65536, 1, 13, 65536, 1, 65549, 262144, 0, 131085, 196608, 1, 196621, 196608, 0, 262157, 65536, 1, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 524301, 131072, 0, 589837, 0, 2, 655373, 196608, 0, 14, 65536, 1, 65550, 65536, 1, 131086, 196608, 1, 196622, 262144, 0, 262158, 262144, 1, 327694, 65536, 1, 393230, 65536, 1, 458766, 65536, 1, 524302, 65536, 1, 589838, 65536, 0, 655374, 65536, 1, 15, 65536, 1, 65551, 65536, 1, 131087, 65536, 1, 196623, 196608, 0, 262159, 196608, 1, 327695, 262144, 0, 393231, 65536, 1, 458767, 262144, 0, 524303, 65536, 1, 589839, 131072, 0, 655375, 0, 2, 16, 65536, 1, 65552, 65536, 1, 131088, 65536, 1, 196624, 65536, 1, 262160, 65536, 1, 327696, 262144, 1, 393232, 65536, 1, 458768, 65536, 1, 524304, 65536, 1, 589840, 65536, 1, 655376, 65536, 2)
layer_1/name = "terrain"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(655363, 327681, 0, 589827, 327681, 0, 524291, 131073, 0, 458755, 131073, 0, 589828, 131073, 0, 655364, 131073, 0, 524292, 327681, 0, 393219, 327681, 0, 327682, 327681, 0, 393218, 131073, 0, 458754, 327681, 0, 327681, 327681, 0, 327684, 131073, 0, 458758, 327681, 0, 458757, 327681, 0, 393222, 131073, 0, 327686, 327681, 0, 393223, 327681, 0, 458759, 327681, 0, 327685, 327681, 0, 327683, 327681, 0, 393224, 327681, 0, 458760, 131073, 0, 524293, 327681, 0, 458761, 327681, 0, 262147, 327681, 0, 262148, 327681, 0, 15, 327681, 0, 65551, 327681, 0, 65552, 131073, 0, 16, 327681, 0, 131088, 131073, 0, 196624, 327681, 0, 14, 327681, 0, 65536, 327681, 0, 0, 327681, 0, 1, 327681, 0, 131078, 131073, 0, 196615, 131073, 0, 196616, 327681, 0, 131080, 131073, 0, 131079, 131073, 0, 65542, 327681, 0, 196617, 131073, 0, 327693, 327681, 0, 393229, 327681, 0, 458765, 327681, 0, 458766, 327681, 0, 393230, 327681, 0, 589840, 327681, 0, 524304, 327681, 0, 196620, 327681, 0, 655370, 131073, 0, 655371, 131073, 0, 589834, 131073, 0, 655369, 327681, 0, 524294, 327681, 0, 589829, 327681, 0, 655365, 131073, 0, 655366, 131073, 0, 2, 327681, 0, 65537, 131073, 0, 11, 327681, 0, 589838, 1, 0, 65546, 65537, 0)
script = ExtResource("24_ewn6v")

[node name="POIManager" type="Node2D" parent="World" node_paths=PackedStringArray("shop_timer_label")]
position = Vector2(8, 8)
script = ExtResource("25_pi7ob")
shop_timer_label = NodePath("../../UI/ShopTimer")
quest_attempt_delay = 12.0
quest_attempt_initial_delay = 1.0
shop_refresh_delay = 20.0

[node name="RedHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(144, 32)
board_position = Vector2i(9, 2)
display_name = "red house"

[node name="PurpleHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(16, 144)
frame = 1
board_position = Vector2i(1, 9)
variation = 1
display_name = "purple house"

[node name="YellowHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(256, 96)
frame = 2
board_position = Vector2i(16, 6)
variation = 2
display_name = "yellow house"

[node name="CyanHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(224, 16)
frame = 3
board_position = Vector2i(14, 1)
variation = 3
display_name = "cyan house"

[node name="OrangeHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(64, 96)
frame = 4
board_position = Vector2i(4, 6)
variation = 4
display_name = "orange house"

[node name="BlueHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(32, 16)
frame = 5
board_position = Vector2i(2, 1)
variation = 5
display_name = "blue house"

[node name="GreenHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(112, 160)
frame = 6
board_position = Vector2i(7, 10)
variation = 6
display_name = "green house"

[node name="PinkHouse" parent="World/POIManager" instance=ExtResource("14_1kkqw")]
position = Vector2(176, 80)
frame = 7
board_position = Vector2i(11, 5)
variation = 7
display_name = "pink house"

[node name="TileBorder" type="Sprite2D" parent="."]
z_index = 1
texture_repeat = 2
position = Vector2(-24, -12)
texture = ExtResource("3_bnpdb")
region_enabled = true
region_rect = Rect2(0, 0, 272, 176)
